# ak-promt

./: .gitignore  01-grundlegende-prinzipien.md  02-fortgeschrittene-techniken.md  03-anwendungsfaelle.md  04-plattform-optimierung.md  05-best-practices.md  06-praktische-beispiele.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  api_auth.py  api_routes.py  app.py  docker-compose.yml  fazit.md  nginx.conf  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
data/: prompts.json
static/: manifest.json  robots.txt  sitemap.xml  sw.js
static/css/: style.css
static/js/: analytics.js  script.js
templates/: about.html  base.html  contact.html  content.html  index.html  newsletter.html  offline.html
